// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusBadge it should mount StatusBadge component with icon 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-radius: 12px;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  padding-right: calc(0.25 * var(--lendi-ui-size));
  border: 1px solid #4ec000;
  color: #4ec000;
  background-color: #f6fbf2;
}

.c1 {
  line-height: 0;
}

.c3 {
  font-size: calc(0.75 * var(--lendi-ui-size));
  line-height: calc(16 / 12);
  font-family: 'Open Sans',sans-serif;
}

.c2 {
  width: 1em;
  height: 1em;
  vertical-align: middle;
}

.c2 > svg {
  fill: #4ec000;
  width: inherit;
  height: inherit;
}

<StatusBadge
  hasIcon={true}
  statusText="COMPLETED"
  variant="success"
>
  <styled.div
    variant="success"
    withIcon={true}
  >
    <div
      className="c0"
    >
      <styled.span>
        <span
          className="c1"
        >
          <SuccessTwo
            color="success.500"
            height="1em"
          >
            <styled.span
              color="success.500"
              height="1em"
            >
              <span
                className="c2"
                color="success.500"
                height="1em"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M18.265 6l-8.111 8.11-4.419-4.405L4 11.44l6.154 6.154L20 7.748z"
                    fillRule="evenodd"
                  />
                </svg>
              </span>
            </styled.span>
          </SuccessTwo>
        </span>
      </styled.span>
      <styled.span
        size="sm"
      >
        <span
          className="c3"
          size="sm"
        >
          COMPLETED
        </span>
      </styled.span>
    </div>
  </styled.div>
</StatusBadge>
`;

exports[`StatusBadge it should mount StatusBadge component without icon 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-radius: 12px;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  padding-right: calc(0.25 * var(--lendi-ui-size));
  border: 1px solid #4ec000;
  color: #4ec000;
  background-color: #f6fbf2;
}

.c1 {
  line-height: 0;
}

.c3 {
  font-size: calc(0.75 * var(--lendi-ui-size));
  line-height: calc(16 / 12);
  font-family: 'Open Sans',sans-serif;
}

.c2 {
  width: 1em;
  height: 1em;
  vertical-align: middle;
}

.c2 > svg {
  fill: #4ec000;
  width: inherit;
  height: inherit;
}

<StatusBadge
  hasIcon={true}
  icon={false}
  statusText="COMPLETED"
  variant="success"
>
  <styled.div
    variant="success"
    withIcon={true}
  >
    <div
      className="c0"
    >
      <styled.span>
        <span
          className="c1"
        >
          <SuccessTwo
            color="success.500"
            height="1em"
          >
            <styled.span
              color="success.500"
              height="1em"
            >
              <span
                className="c2"
                color="success.500"
                height="1em"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M18.265 6l-8.111 8.11-4.419-4.405L4 11.44l6.154 6.154L20 7.748z"
                    fillRule="evenodd"
                  />
                </svg>
              </span>
            </styled.span>
          </SuccessTwo>
        </span>
      </styled.span>
      <styled.span
        size="sm"
      >
        <span
          className="c3"
          size="sm"
        >
          COMPLETED
        </span>
      </styled.span>
    </div>
  </styled.div>
</StatusBadge>
`;
